supabase-service/k8s/app/supabase-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supabase-buffer
spec:
  selector:
    app: supabase-buffer
  ports:
    - name: http
      port: 8000
      targetPort: 8080
    - name: metrics
      port: 9901
      targetPort: 9901
